--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>🎁 Juego del Amigo Secreto</h1>
+    <h1> Juego del Amigo Secreto</h1>
 
     <input type="text" id="nombreAmigo" placeholder="Escribe un nombre">
     <button onclick="agregarAmigo()">Adicionar</button>
@@ -20,3 +20,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
