--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Amigo Secreto</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1> Juego del Amigo Secreto</h1>
 
-    <input type="text" id="nombreAmigo" placeholder="Escribe un nombre">
-    <button onclick="agregarAmigo()">Adicionar</button>
+<h1>Juego del Amigo Secreto</h1>
 
-    <ul id="listaAmigos"></ul>
+<input type="text" id="nombreAmigo" placeholder="Escribe un nombre">
+<button onclick="agregarAmigo()">Agregar</button>
 
-    <button onclick="sortearAmigo()">Sortear Amigo</button>
-    <p id="resultado"></p>
+<ul id="listaAmigos"></ul>
 
-    <script src="script.js"></script>
+<button onclick="sortearAmigo()">Sortear</button>
+
+<p id="resultado"></p>
+
+<script src="script.js"></script>
 </body>
 </html>
-
